--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+body { padding: 50px; background-color: #66CCFF; font-family: sans-serif; } #root { display: flex; justify-content:
+center; }
+</style>
+
 	<title>React App</title>
 </head>
 
